--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,56 +1,69 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=MedievalSharp&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&family=MedievalSharp&display=swap");
 
-body{
-    background: rgb(200, 175, 113);
-    margin: 0%;
-    font-family: "Cinzel";
+body {
+  margin: 0%;
+  font-family: "Cinzel";
 }
-#menu{
-    user-select: none;
-    display : flex;
-    overflow : hidden;
-    align-items: center;
-    align-content: center;
-    margin: 0%;
-    justify-content: center;
-    cursor: pointer;
+#menu {
+  background-color: rgb(181, 160, 105);
+  user-select: none;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  align-content: center;
+  margin: 0%;
+  justify-content: center;
+  cursor: pointer;
 }
 #menu a {
-    float: left;
-    display: block;
-    color: #e5e4e4;
-    text-align: center;
-    padding: 1em 5em;
-    text-decoration: none;
-    font-size: 100%;
-    font-family: "Cinzel";
-    font-weight: 600;
+  float: left;
+  display: block;
+  color: #e5e4e4;
+  text-align: center;
+  padding: 1em 5em;
+  text-decoration: none;
+  font-size: 100%;
+  font-family: "Cinzel";
+  font-weight: 600;
 }
-  
+
 #menu a:hover {
-    background-color: rgb(159, 139, 87);
-    color: #ddd
+  background-color: rgb(159, 139, 87);
+  color: #ddd;
 }
-  
+
 #menu a.active {
-    background-color: rgb(159, 139, 87);
-    color:#000000
+  background-color: rgb(159, 139, 87);
+  color: #000000;
 }
-  
-  /* Style the active class (and buttons on mouse-over) */
+
+/* Style the active class (and buttons on mouse-over) */
 #menu a.active:hover {
-    cursor: initial;
+  cursor: initial;
 }
 
-#Sheet{
-    width: 100%;
-    height: 100%;
+.Sheet {
+  width: 100%;
+  height: 100%;
+  user-select: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
-.overlay{
-    display: flex;
-    margin: auto;
-    width: 70%;
-    height: 70%;
-
+.overlay {
+  display: flex;
+  margin: auto;
+  width: 70%;
+  height: 70%;
+}
+#chShForm {
+  position: absolute;
+  z-index: 999;
+  top: 7em;
+}
+#charName {
+  border: none;
 }
